<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.placar.MainActivity">

    <TextView
        android:id="@+id/header"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/tamanho_titulo"/>

    <TextView
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido_por"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_below="@+id/header"
        android:layout_above="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_da_casa"/>
        <EditText
            android:hint="@string/hint_time_casa"
            android:id="@+id/etTimeCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_visitante"/>
        <EditText
            android:hint="@string/hint_time_visitante"
            android:id="@+id/etTimeVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_jogo"
            android:onClick="iniciarJogo"/>
    </LinearLayout>



</RelativeLayout>
